finished Landing page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CacheKeys</title>
-    <link rel="icon" href="/images/logo.ico" />
+    <link rel="icon" href="images/logo.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="style.css" />
@@ -14,7 +14,7 @@
 <body>
     <header class='header'>
         <div>
-            <img src='/images/logoName.png' class="site-name" alt="Site Logo" />
+            <img src='images/logoName.png' class="site-name" alt="Site Logo" />
         </div>
         <nav>
             <a href="#">Practice</a>
@@ -42,7 +42,7 @@
                         challenge to keep improving. Practice regularly and watch your typing skills soar!</p>
                 </div>
                 <div class="image">
-                    <img src='/images/image.png' />
+                    <img src='images/image.png' />
                 </div>
             </section>
             <section class="content reverse">
@@ -55,7 +55,7 @@
                         Compete with friends or challenge yourself to beat your personal best!</p>
                 </div>
                 <div class="image">
-                    <img src='/images/timer.png' />
+                    <img src='images/timer.png' />
                 </div>
             </section>
             <section class="content">
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="image">
-                    <img src='/images/keys.png' />
+                    <img src='images/keys.png' />
                 </div>
             </section>
         </main>
